Refactor env variables.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,2 @@
-TWITCH_BOT_CLIENT_ID="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+TWITCH_CHANNEL_CLIENT_ID="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
 TWITCH_CHANNEL_ACCESS_TOKEN="bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
