Refactor env vars.

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,4 @@
-TWITCH_CHANNEL_CLIENT_ID="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
-TWITCH_CHANNEL_ACCESS_TOKEN="bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
+# Used to query twitch for streams casting quake
+# See: https://dev.twitch.tv/docs/authentication/getting-tokens-oauth#client-credentials-flow-example
+TWITCH_CLIENT_ID="aaaaaaaaaaaaaaaaaaaaaaaaaaaaaa"
+TWITCH_ACCESS_TOKEN="bbbbbbbbbbbbbbbbbbbbbbbbbbbbbb"
