Remove obsolete type.

--- a/config.sample.json
+++ b/config.sample.json
@@ -12,9 +12,9 @@
     ]
   },
  "qtv_demo_sources": [
-    {"address": "qw.irc.ax:28000", "date_format": "ymd"},
-    {"address": "troopers.fi:28000", "date_format": "ymd"},
-    {"address": "qw.foppa.dk:28000", "date_format": "dmy"}
+    {"address": "qw.irc.ax:28000", "demo_date_format": "ymd"},
+    {"address": "troopers.fi:28000", "demo_date_format": "ymd"},
+    {"address": "qw.foppa.dk:28000", "demo_date_format": "dmy"}
   ],
   "streamers": {
     "annihilazor": "anni",
