--- a/config.sample.json
+++ b/config.sample.json
@@ -12,9 +12,21 @@
     ]
   },
   "qtv_demo_sources": [
-    {"address": "qw.irc.ax:28000", "demo_date_format": "ymd"},
-    {"address": "troopers.fi:28000", "demo_date_format": "ymd"},
-    {"address": "quake.se:28000", "demo_date_format": "Ymd"}
+    {
+      "address": "ny.quake.world:28000",
+      "demo_date_format": "ymd",
+      "timezone": "America/New_York"
+    },
+    {
+      "address": "troopers.fi:28000",
+      "demo_date_format": "ymd",
+      "timezone": "Europe/Helsinki"
+    },
+    {
+      "address": "quake.se:28000",
+      "demo_date_format": "Ymd",
+      "timezone": "Europe/Sweden"
+    }
   ],
   "streamers": {
     "annihilazor": "anni",
